<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_notification_button"
        android:title="@string/menu_notification_label" />
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_button"
        android:title="Home" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile_button"
        android:title="@string/menu_profile_label" />
</menu>
