...
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/header_fragment"
        >

        <!-- Personal Information -->
        <TextView
            android:id="@+id/personal_info"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="Personal Information"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
...
            android:background="@color/lighter_gray" />

        <TextView
            android:id="@+id/admin_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="Login as Admin"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="16dp"
            android:background="?attr/selectableItemBackground" />

...
