...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/event_name_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/event_description_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/event_location_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/start_date_input_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/end_date_input_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/start_time_input_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/end_time_input_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_start_input_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_end_input_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sample_size_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

        <CheckBox
            android:id="@+id/sports_category_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <CheckBox
            android:id="@+id/geolocation_requirement_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...

        <CheckBox
            android:id="@+id/entrant_limit_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
            android:visibility="invisible"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toTopOf="@id/create_event_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/entrant_limit_checkbox"
...

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/entrant_limit_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
